Fix list toolbar overwrapping on mobile

--- a/styles/components/_list-input.scss
+++ b/styles/components/_list-input.scss
@@ -12,9 +12,9 @@ $success-color: #cbff8f;
 $info-color: #295970;
 
 $search-bkg-color: white;
-$search-color: #333;
+$search-color: #47526E;
 
-$add-bkg-color: #FF3C00;
+$add-bkg-color: #47526E;
 $add-disabled-color: #37474F;
 $add-color: white;
 
@@ -37,6 +37,7 @@ $add-color: white;
       @include flex-center;
       opacity: $secondary-opacity;
       cursor: pointer;
+      transition: all .5s ease;
     }
 
     &.add > .icon { margin-left: auto; }
@@ -50,6 +51,7 @@ $add-color: white;
   &.search > .state.search,
   &.add > .state.add {
     max-width: 100%;
+    .icon { opacity: 1; }
   }
 
   // input
@@ -238,10 +240,11 @@ $add-color: white;
 
   .state.add {
     background: rgba($add-bkg-color, .4);
+    // background: rgba(#47526E, .5);
     color: rgba($add-color, 1);
 
     .icon {
-      background: rgba($add-bkg-color, .9);
+      background: rgba($add-bkg-color, 1);
       @include add-icon-colorize($add-color);
     }
 
