--- a/styles/link-widgets.scss
+++ b/styles/link-widgets.scss
@@ -13,10 +13,6 @@ $board-space: .5rem;
     margin-top: -$line-height/4;
     margin-bottom: 0;
   }
-
-  > header.filter {
-    margin: $line-height 0;
-  }
 }
 
 .website.widget {
